# simple-lpw

./: CMakeLists.txt  README.md  build. bat  build.bat
example/: CMakeLists.txt
example/keyboard/: CMakeLists.txt  test_keyboard.c
example/mouse/: CMakeLists.txt  test_mouse.c
example/window/: CMakeLists.txt  create_window.c
include/lpw/: lpw.h
include/lpw/basic_type/: basic_type.h
include/lpw/device/: device.h  device_prototype.h  event_handler.h  platform_data.h  platform_data_prototype.h
include/lpw/device/keyboard/: keyboard.h  keyboard_prototype.h
include/lpw/device/mouse/: mouse.h  mouse_prototype.h
include/lpw/device/window/: window.h  window_prototype.h
include/lpw/enum/: keyboard_event.h  keyboard_key.h  keyboard_key_state.h  mouse_button.h  mouse_event.h  mouse_pos_flag.h  mouse_wheel.h  process_event_type.h  result.h  window_event.h
include/lpw/macro/: debug.h  platform.h  platform_sdk.h
include/lpw/tool/: debug.h  enum_to_str.h  handle.h
src/device/: device.c  event_handler.c
src/device/keyboard/: keyboard.c
src/device/mouse/: mouse.c
src/device/window/: window.c
src/tool/: enum_to_str.c
